# django-fullstack-template

./: .gitlab-ci.yml  README.md  catalog-info.yaml  cookiecutter.json  pyproject.toml  template.yaml
template/: .gitignore  catalog-info.yaml
template/.run/: Django Development Server.run.xml  Django Tests.run.xml
template/apps/identity/: apps.py  models.py
template/config/: asgi.py  settings.py  wsgi.py
{{ cookiecutter.project_name }}/: .env.example  .gitignore  pyproject.toml
{{ cookiecutter.project_name }}/.run/: Django Development Server.run.xml  Django Tests.run.xml  Run Django Shell (shell_plus).run.xml
{{ cookiecutter.project_name }}/apps/identity/: admin.py
{{ cookiecutter.project_name }}/apps/identity/migrations/: 0001_initial.py
{{ cookiecutter.project_name }}/config/: settings.py  urls.py
