[tool.poetry]
name = "django-fullstack-template"
version = "0.1.0"
description = ""
authors = ["wwermund <wolfgang.wermund@exxcellent.de>"]
readme = "README.md"
packages = [{include = "django_fullstack_template"}]

[tool.poetry.dependencies]
python = "^3.11"
cookiecutter = "^2.1.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
